# funcprog

./: LICENSE  README.md
cogs/: README.md  cogs.cabal  testscript.sh
cogs/src/: CogsParser.hs  CogsSolver.hs  Graphic.hs  Main.hs  Parser.hs  Types.hs
cogs/tests/: invalid-1.txt  invalid-2.txt  invalid-3.txt  invalid-4.txt  invalid-5.txt  invalid-coordrange.txt  solved-1.txt  solved-2.txt  solved-3.txt  solved-4.txt  solved-5.txt  solved-6.txt  unsolved-1.txt  unsolved-2.txt  unsolved-3.txt
sausage-roll/: README.md  sausage.cabal
sausage-roll/src/: BoardParser.hs  DiffTest.hs  Graphic.hs  Main.hs  Parser.hs  Push.hs  Types.hs
sausage-roll/tests/: 1.in  1.out  2.in  2.out  3.in  3.out  3.steps  4.in  4.out  5.in  5.out  6.in  6.out  6.steps
snake/: README.md  snake.cabal
snake/src/: Main.hs
tetris/: README.md  tetris.cabal
tetris/src/: Main.hs
