name:                cogs
version:             0.1.0.0
build-type:          Simple
cabal-version:       >=1.10

executable cogs
  hs-source-dirs:    src
  main-is:           Main.hs
  default-language:  Haskell2010
  build-depends:     base >= 4.8 && < 5
                   , gloss >= 1.11 && < 2
  ghc-options:       -Wall
  other-modules:     Parser, Types, CogsParser, CogsSolver, Graphic
