name:                sausage
version:             0.1.0.0
build-type:          Simple
cabal-version:       >=1.10

executable sausage-roll
  hs-source-dirs:    src
  main-is:           Main.hs
  default-language:  Haskell2010
  build-depends:     base >= 4.8 && < 5
                   , gloss >= 1.11 && < 2
                   , containers
  ghc-options:       -Wall -Werror -Wno-name-shadowing
  other-modules:     Parser, Types, BoardParser, Push, Graphic

executable sausage-test
  hs-source-dirs:    src
  main-is:           DiffTest.hs
  default-language:  Haskell2010
  build-depends:     base >= 4.8 && < 5
                   , gloss >= 1.11 && < 2
                   , directory >= 1.3 && < 1.4
                   , filepath >= 1.4.2 && < 1.5
                   , process >= 1.6 && < 1.7
