name:                tetris
version:             0.1.0.0
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable tetris
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  ghc-options:         -Wall -Werror
  build-depends:       base >= 4.7 && < 5
                     , gloss >= 1.11 && < 1.13
                     , random >= 1.1 && < 1.2
